chore(config): update project environment and global settings

--- a/SrDoc.Api/appsettings.Development.json
+++ b/SrDoc.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SrDocDb;User Id=sa;Password=YourStrong@Password123;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
