--- a/.github/workflows/aks-deploy.yml
+++ b/.github/workflows/aks-deploy.yml
@@ -40,7 +40,7 @@ jobs:
       uses: azure/k8s-deploy@v4
       with:
         manifests: |
-          backend/manifests/deployment.yaml
-          backend/manifests/service.yaml
+          manifests/deployment.yaml
+          manifests/service.yaml
         images: |
           srdoc.azurecr.io/srdoc-api:${{ github.sha }}
