fix: alter 'TargetPort'

--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: srdoc-api # Deve ser exatamente igual ao label definido no deployment.yml
+    app: srdoc-api
   ports:
     - protocol: TCP
-      port: 80        # Porta que será acessada via IP Público
-      targetPort: 80  # Porta que a aplicação .NET está ouvindo no container
+      port: 80        # Porta externa (IP público)
+      targetPort: 8080 # Porta interna do container (.NET)
